# polymind

./: .env.docker  .env.example  .gitignore  DEPLOY.md  README.md  README_MAS+.md  README_MAS.md  chat.html  docker-compose.yml  spec.md
agents/: .dockerignore  Dockerfile  brain.py  pyproject.toml
agents/prompts/: analyst.txt  critic.txt  scout.txt  writer.txt
agents/roles/: analyst.py  base.py  critic.py  scout.py  writer.py
agents/tools/: llm.py  search.py
data/searxng/: settings.yml
nginx/: nginx_config_example
orchestrator/: .dockerignore  .env.example  Dockerfile  go.mod  go.sum
orchestrator/cmd/orchestrator/: main.go
orchestrator/internal/broker/: connection.go
orchestrator/internal/database/: db.go  jsonmap.go  models.go
orchestrator/internal/handlers/: analist.go  critic.go  result.go  scout.go  writer.go
orchestrator/internal/telegram/: bot.go
orchestrator/internal/web/: server.go
static/: chat_modified.html
