[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aio-pika>=9.6.2",
    "ddgs>=9.14.0",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "openai>=2.32.0",
    "psycopg2-binary>=2.9.11",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]
